gccida/g2/size_diffop
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2508:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v4; // rdx 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // r13 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2511:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2515:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v12; // rsi 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v13; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2543:20: error: expected expression
v12 = ( tree_node *)*( &global_trees + 11); 
                   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2543:9: error: use of undeclared identifier 'tree_node'
v12 = ( tree_node *)*( &global_trees + 11); 
        ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2550:19: error: expected expression
v7 = ( tree_node *)*( &global_trees + 11); 
                  ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/fold-const.c:2550:8: error: use of undeclared identifier 'tree_node'
v7 = ( tree_node *)*( &global_trees + 11); 
       ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/size_diffop/src/obj/fold-const.o] Error 1
